// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`powerStatus reducer should handle HOST_POWER_STATUS_FAILURE 1`] = `
Object {
  "2": Object {
    "error": "some error happened",
    "id": "2",
    "state": "na",
    "statusText": "Failed to fetch power status",
    "title": "N/A",
  },
}
`;

exports[`powerStatus reducer should handle HOST_POWER_STATUS_REQUEST 1`] = `
Object {
  "2": Object {
    "error": null,
    "status": "PENDING",
  },
}
`;

exports[`powerStatus reducer should handle HOST_POWER_STATUS_SUCCESS 1`] = `
Object {
  "2": Object {
    "data": "data",
    "error": null,
    "id": "2",
    "status": "RESOLVED",
    "url": "test",
  },
}
`;

exports[`powerStatus reducer should return the initial state 1`] = `
Object {
  "error": null,
  "status": "PENDING",
}
`;
